fixed some of the alignment errors

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,10 +44,10 @@ body {
 
   }
 
-  @include media($tablet) {
-    background-color: #293f69;
-    background-image: none;
-  }
+/*   @include media($tablet) {
+  background-color: #293f69;
+  background-image: none;
+} */
   }
 
 .header-words {
@@ -59,9 +59,24 @@ body {
   text-shadow: 1px 1px black;
 
   @include media($mobile) {
+    @include shift(.2);
     font-size: 70px;
+
  }
 
+}
+
+.headh2 {
+  color: white;
+  font-family: 'Lato', sans-serif;
+  font-size: 75px;
+  text-shadow: 1px 1px black;
+
+  @include media($mobile) {
+    font-size: 45px;
+    @include shift(.2);
+
+ }
 }
 
 .header a {
@@ -81,6 +96,7 @@ body {
 
   @include media($mobile) {
     @include span-columns(4);
+    @include shift(.2);
  }
 
   font-family: 'Roboto Condensed', sans-serif;
@@ -127,6 +143,9 @@ body {
   width: 500px;
 }
 
+.who {
+  text-align: center;
+}
 
 .bio-words {
   @include span-columns(6);
@@ -142,27 +161,26 @@ body {
  }
 }
 
-.bio-pic {
-  @include span-columns(3);
-  margin: 0 auto;
-  background-image: url('../styles/imgs/bigfoot.jpg');
-  background-size: 100% 100%;
-  width: 300px;
-  height: 300px;
-}
+
 
 //////////////////////Projects//////////////////////
 
 #project-display {
   @include outer-container;
+  @include span-columns(9);
   @include shift(1);
 
   padding-bottom: 20px;
   padding-left: none;
+
+  @include media($mobile) {
+    @include shift(0);
+  }
 }
 
 .proj {
-  padding-bottom: 20px;
+  padding: 100px 0 20px;
+  text-align: center;
 }
 
 
@@ -241,19 +259,20 @@ body {
 
 //////////////////////Contact//////////////////////
 .big-div {
-  height: 1000px;
+  height: 500px;
+  text-align: center;
 }
 
 .contact {
   @include outer-container;
   @include span-columns(9);
 
-  width: 100%;
 /*   height: 450px;*/
+  margin: 0 auto;
+  width: 100%;
   color: #402613;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 35px;
-  margin: 0 auto;
 
   float: left;
   clear: both;
@@ -264,6 +283,7 @@ body {
     color: #293f69;
 
   }
+
   }
 
 .icon {
@@ -273,21 +293,19 @@ body {
 }
 
 #conth1 {
+  display: block;
+  padding: 100px 0 20px;
   width: 100%;
+  height: inherit;
+  text-align: center;
   color: #402613;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 35px;
-  @include span-columns(10);
-  display: block;
-  padding-top: 100px;
-  padding-bottom: 20px;
-  height: inherit;
 
 
   @include media($mobile) {
-    @include span-columns(3);
-    @include shift(1);
-      color: #293f69;
+/*     display: flex;
+ */    color: #293f69;
 }
 }
 
@@ -296,33 +314,41 @@ body {
   width: 500px;
 
   @include media($mobile) {
-    width: 100%;
+
   }
 }
 
 #wrap {
   @include span-columns(6);
   @include shift(2);
+  margin-left: 0;
+  width: 100%;
 
   @include media($tablet) {
     @include span-columns(4);
+    @include shift(1.5);
     color: #293f69;
+  }
+
+  @include media($mobile) {
+    @include span-columns(4);
   }
 
 }
 
 #wrap a {
   display: inline-block;
+  margin: 0 auto;
   border-radius: 120px;
   background-color: #fff;
   width: 120px;
   height: 120px;
   text-align: center;
   color: #402613;
-  margin: 0 auto;
 
   @include media($mobile) {
-    width: 100%;
+    margin: 0 auto;
+    width: 90px;
     color: #293f69;
   }
     }
@@ -333,9 +359,40 @@ a .fa {
   height: 100%;
   line-height: 120px;
   font-size: 75px;
+
+  @include media($mobile) {
+    font-size: 45px;
+  }
     }
 
-  #wrap a:hover{
-    color: white;
+  #wrap a:hover {
     background-color: #402613;
+    color: white;
+
+    @include media($mobile) {
+      background-color: #293f69;
+      color: white;
     }
+    }
+
+.h1h1 {
+  display: block;
+  padding: 100px 0 20px;
+  width: 100%;
+  height: inherit;
+  text-align: center;
+  color: #402613;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 35px;
+
+
+  @include media($mobile) {
+ /* display: flex;*/
+    color: #293f69;
+}
+}
+
+.h1h1 h1 {
+  margin: 0 auto;
+  width: 500px;
+}
